Predict Rain tomorrow

--- a/src/Notebooks/4_Modeling/5.1_Predict_Rain_Keras.ipynb
+++ b/src/Notebooks/4_Modeling/5.1_Predict_Rain_Keras.ipynb
@@ -515,7 +515,7 @@
     "\n",
     "keys = clf.evals_result()['validation_0'].keys()\n",
     "\n",
-    "fig, ax = plt.subplots( 1, len(keys) ,figsize = (7*len(keys),7))\n",
+    "fig, ax = plt.subplots( 1, len(keys), figsize = (7*len(keys),7))\n",
     "ax = ax.ravel()\n",
     "for i, key in enumerate(keys):\n",
     "    ax[i].set_title(key)\n",
@@ -543,12 +543,180 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
     "y_pred_prob = clf.predict_proba(encoded_data_test)\n",
-    "plot_precision_recall(y_test, y_pred_prob[:,1])\n"
+    "fig = plot_precision_recall(y_test, y_pred_prob[:,1])\n",
+    "fig.update_layout(template = 'plotly_dark')\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "\n",
+    "METRICS = [\n",
+    "      keras.metrics.TruePositives(name='tp'),\n",
+    "      keras.metrics.FalsePositives(name='fp'),\n",
+    "      keras.metrics.TrueNegatives(name='tn'),\n",
+    "      keras.metrics.FalseNegatives(name='fn'), \n",
+    "      keras.metrics.BinaryAccuracy(name='accuracy'),\n",
+    "      keras.metrics.Precision(name='precision'),\n",
+    "      keras.metrics.Recall(name='recall'),\n",
+    "      keras.metrics.AUC(name='auc'),\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(20, input_dim=encoded_data_train.shape[1],\n",
+    "                activation='relu'))\n",
+    "model.add(Dense(15, activation='relu'))\n",
+    "model.add(Dense(10, activation='relu'))\n",
+    "model.add(Dense(5, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=METRICS)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(encoded_data_train, y_train, epochs=150, batch_size=10, \n",
+    "                    validation_data=(encoded_data_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = (model.predict(encoded_data_test) > 0.5 ).astype(int)\n",
+    "plot_confusion_matrix(y_test, y_pred, ['0', '1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = encoded_data_train.shape[0]\n",
+    "pos = np.unique(y_train, return_counts=True)[1][1]\n",
+    "neg = np.unique(y_train, return_counts=True)[1][0]\n",
+    "\n",
+    "weight_for_0 = (1 / neg)*(total)/2.0 \n",
+    "weight_for_1 = (1 / pos)*(total)/2.0\n",
+    "\n",
+    "class_weights = {0: weight_for_0, 1: weight_for_1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Dense(20, input_dim=encoded_data_train.shape[1], activation='relu'))\n",
+    "model.add(Dense(15, activation='relu'))\n",
+    "model.add(Dropout(0.2))\n",
+    "model.add(Dense(10, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(5, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(5, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=METRICS)\n",
+    "\n",
+    "history = model.fit(encoded_data_train, y_train, epochs=150, batch_size=10, \n",
+    "                    validation_data=(encoded_data_test, y_test), class_weight = class_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_prob = model.predict(encoded_data_test)\n",
+    "y_pred = (y_pred_proba  > 0.5 ).astype(int)\n",
+    "plot_confusion_matrix(y_test, y_pred, ['0', '1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plot_precision_recall(y_test, y_pred_prob)\n",
+    "fig.update_layout(template = 'plotly_dark')\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desired_recall = 0.8\n",
+    "\n",
+    "precision, recall, threshold = precision_recall_curve(y_test, y_pred_prob)\n",
+    "y_pred_threshold = (y_pred_prob > threshold[arg_nearest(recall, desired_recall)]).astype(int)\n",
+    "\n",
+    "plot_confusion_matrix(y_test, y_pred_threshold, ['0','1'])\n",
+    "evaluate = (y_test, y_pred_threshold)\n",
+    "print('f1_score: ', f1_score(*evaluate))\n",
+    "print('Accuracy: ', accuracy_score(*evaluate))\n",
+    "print('Precision: ', precision_score(*evaluate))\n",
+    "print('Recall: ', recall_score(*evaluate))"
    ]
   }
  ],
