--- a/src/Notebooks/4_Modeling/5.2_Predict_Rain_selected_features.ipynb
+++ b/src/Notebooks/4_Modeling/5.2_Predict_Rain_selected_features.ipynb
@@ -132,130 +132,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vento"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://snowfence.umn.edu/Components/winddirectionanddegrees.htm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "errors = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/error_regions.csv', sep = ';')\n",
-    "errors[[c for c in errors.columns if 'Direcao' in c]].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_wind = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rv_ = reverse_mod(original_df[f'DirecaoDoVento_{selected_wind}'].values)\n",
-    "v_ = moving_average(rv_, window = 15)\n",
-    "v_ = np.mod(v_, 360)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "x= list(range(len(rv_))),\n",
-    "y = rv_))\n",
-    "\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x = original_df['Data_Hora'],\n",
-    "    y = original_df[f'DirecaoDoVento_{selected_wind}'],\n",
-    "    name = f'DirecaoDoVento_{selected_wind}',\n",
-    "    line = dict(color = 'gray')),\n",
-    "             )\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x = original_df['Data_Hora'],\n",
-    "    y = v_,\n",
-    "    name = 'Avg'),\n",
-    "             )\n",
-    "    \n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wind_direction = np.empty(v_.shape, dtype = np.object)\n",
-    "wind_direction[(v_ > 315 ) | (v_ <=  45 )] = 0 # North\n",
-    "wind_direction[(v_ >  45 ) & (v_ <= 135 )] = 1 # East\n",
-    "wind_direction[(v_ > 135 ) & (v_ <= 225 )] = 2 # South\n",
-    "wind_direction[(v_ > 225 ) & (v_ <= 315 )] = 3 # West"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = {0:'North', 1:'East', 2:'South', 3:'West'}\n",
-    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
-    "\n",
-    "for i in range(4):\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x = original_df['Data_Hora'],\n",
-    "        y = pd.Series(v_).where(wind_direction == i),\n",
-    "        name = name[i]),\n",
-    "                 )\n",
-    "    \n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_df['DirecaoDoVento'] = wind_direction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Has Rain"
    ]
   },
@@ -325,13 +201,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "sum_date = df[interest_cols + ['Date']].groupby('Date').sum()\n",
@@ -347,10 +216,7 @@
     "min_date.columns = [c + '_min' for c in min_date.columns]\n",
     "\n",
     "# max_date = df[interest_cols + ['Date']].groupby('Date').max()\n",
-    "# max_date.columns = [c + '_max' for c in max_date.columns]\n",
-    "\n",
-    "wind_direction_mode = df[['DirecaoDoVento','Date']].groupby('Date')\\\n",
-    "                        .apply(pd.DataFrame.mode).set_index('Date', drop = True)"
+    "# max_date.columns = [c + '_max' for c in max_date.columns]\n"
    ]
   },
   {
@@ -359,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_date = pd.concat([df_date, min_date, sum_date, mean_date, wind_direction_mode], axis = 1)\n",
+    "df_date = pd.concat([df_date, min_date, sum_date, mean_date], axis = 1)\n",
     "# df_date = pd.concat([df_date, sum_date, mean_date, median_date, min_date, max_date], axis = 1)\n",
     "df_date.head(2)"
    ]
@@ -462,55 +328,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seected_cols = [\n",
-    "                'Rain_Today',\n",
-    "                'Rain_Next_Day',\n",
-    "                'TemperaturaDoAr_min',\n",
-    "                'UmidadeRelativa_min',\n",
-    "                'PressaoAtmosferica_min',\n",
-    "                'PontoDeOrvalho_min',\n",
-    "                'RadiacaoSolar_min',\n",
-    "                'Precipitacao_min',\n",
-    "                'VelocidadeDoVento_min',\n",
-    "                'DirecaoDoVento_min',\n",
-    "                'Diff_Temp_POrvalho_min',\n",
-    "                'TemperaturaDoAr_sum',\n",
-    "                'UmidadeRelativa_sum',\n",
-    "                'PressaoAtmosferica_sum',\n",
-    "                'PontoDeOrvalho_sum',\n",
-    "                'RadiacaoSolar_sum', \n",
-    "                'Precipitacao_sum', \n",
-    "                'VelocidadeDoVento_sum',\n",
-    "                'DirecaoDoVento_sum', \n",
-    "                'Diff_Temp_POrvalho_sum', \n",
-    "                'TemperaturaDoAr_mean',\n",
-    "                'UmidadeRelativa_mean', \n",
-    "                'PressaoAtmosferica_mean',\n",
-    "                'PontoDeOrvalho_mean', \n",
-    "                'RadiacaoSolar_mean', \n",
-    "                'Precipitacao_mean',\n",
-    "                'VelocidadeDoVento_mean', \n",
-    "                'DirecaoDoVento_mean',\n",
-    "                'Diff_Temp_POrvalho_mean', \n",
-    "                'TemperaturaDoAr_diff_15h9',\n",
-    "                'TemperaturaDoAr_diff_21h3', \n",
-    "                'UmidadeRelativa_diff_15h9',\n",
-    "                'UmidadeRelativa_diff_21h3', \n",
-    "                'PressaoAtmosferica_diff_15h9',\n",
-    "                'PressaoAtmosferica_diff_21h3', \n",
-    "                'PontoDeOrvalho_diff_15h9',\n",
-    "                'PontoDeOrvalho_diff_21h3', \n",
-    "                'RadiacaoSolar_diff_15h9',\n",
-    "                'RadiacaoSolar_diff_21h3', \n",
-    "                'Diff_Temp_POrvalho_diff_15h9',\n",
-    "                'Diff_Temp_POrvalho_diff_21h3', \n",
-    "                'Precipitacao_diff_15h9',\n",
-    "                'Precipitacao_diff_21h3', \n",
-    "#                 'VelocidadeDoVento_diff_15h9',\n",
-    "#                 'VelocidadeDoVento_diff_21h3', \n",
-    "#                 'DirecaoDoVento_diff_15h9',\n",
-    "#                 'DirecaoDoVento_diff_21h3'\n",
-    "                ]"
+    "selected_cols = ['Rain_Today', 'Rain_Next_Day',\n",
+    "#        'DirecaoDoVento_min',\n",
+    "#        'VelocidadeDoVento_min',\n",
+    "#        'UmidadeRelativa_min',\n",
+    "#        'Precipitacao_min',\n",
+    "#        'RadiacaoSolar_min',\n",
+    "#        'PontoDeOrvalho_min', \n",
+    "#        'TemperaturaDoAr_min',\n",
+    "       'PressaoAtmosferica_min',\n",
+    "#        'Diff_Temp_POrvalho_min',\n",
+    "#        'DirecaoDoVento_sum',\n",
+    "#        'VelocidadeDoVento_sum', \n",
+    "       'UmidadeRelativa_sum',\n",
+    "       'Precipitacao_sum',\n",
+    "#        'RadiacaoSolar_sum',\n",
+    "       'PontoDeOrvalho_sum',\n",
+    "       'TemperaturaDoAr_sum',\n",
+    "#        'PressaoAtmosferica_sum',\n",
+    "#        'Diff_Temp_POrvalho_sum',\n",
+    "       'DirecaoDoVento_mean',\n",
+    "       'VelocidadeDoVento_mean',\n",
+    "       'UmidadeRelativa_mean',\n",
+    "       'Precipitacao_mean',\n",
+    "       'RadiacaoSolar_mean',\n",
+    "       'PontoDeOrvalho_mean',\n",
+    "       'TemperaturaDoAr_mean',\n",
+    "       'PressaoAtmosferica_mean',\n",
+    "       'Diff_Temp_POrvalho_mean',\n",
+    "#        'DirecaoDoVento_3H',\n",
+    "#        'VelocidadeDoVento_3H',\n",
+    "#        'UmidadeRelativa_3H',\n",
+    "#        'Precipitacao_3H',\n",
+    "#        'RadiacaoSolar_3H',\n",
+    "#        'PontoDeOrvalho_3H',\n",
+    "#        'TemperaturaDoAr_3H',\n",
+    "#        'PressaoAtmosferica_3H',\n",
+    "#        'Diff_Temp_POrvalho_3H',\n",
+    "#        'DirecaoDoVento_9H',\n",
+    "#        'VelocidadeDoVento_9H',\n",
+    "#        'UmidadeRelativa_9H',\n",
+    "#        'Precipitacao_9H',\n",
+    "#        'RadiacaoSolar_9H',\n",
+    "#        'PontoDeOrvalho_9H',\n",
+    "#        'TemperaturaDoAr_9H',\n",
+    "#        'PressaoAtmosferica_9H',\n",
+    "#        'Diff_Temp_POrvalho_9H',\n",
+    "#        'DirecaoDoVento_15H',\n",
+    "#        'VelocidadeDoVento_15H',\n",
+    "#        'UmidadeRelativa_15H',\n",
+    "#        'Precipitacao_15H',\n",
+    "#        'RadiacaoSolar_15H', \n",
+    "#        'PontoDeOrvalho_15H',\n",
+    "#        'TemperaturaDoAr_15H',\n",
+    "#        'PressaoAtmosferica_15H',\n",
+    "#        'Diff_Temp_POrvalho_15H',\n",
+    "#        'DirecaoDoVento_diff_15h9',\n",
+    "#        'DirecaoDoVento_diff_21h3',\n",
+    "       'VelocidadeDoVento_diff_15h9',\n",
+    "       'VelocidadeDoVento_diff_21h3',\n",
+    "       'UmidadeRelativa_diff_15h9',\n",
+    "       'UmidadeRelativa_diff_21h3',\n",
+    "       'Precipitacao_diff_15h9',\n",
+    "       'Precipitacao_diff_21h3',\n",
+    "#        'RadiacaoSolar_diff_15h9',\n",
+    "#        'RadiacaoSolar_diff_21h3',\n",
+    "       'Diff_Temp_POrvalho_diff_15h9',\n",
+    "       'Diff_Temp_POrvalho_diff_21h3',\n",
+    "       'PontoDeOrvalho_diff_15h9',\n",
+    "       'PontoDeOrvalho_diff_21h3',\n",
+    "       'TemperaturaDoAr_diff_15h9',\n",
+    "       'TemperaturaDoAr_diff_21h3',\n",
+    "       'PressaoAtmosferica_diff_15h9',\n",
+    "       'PressaoAtmosferica_diff_21h3']"
    ]
   },
   {
@@ -550,13 +440,13 @@
     "    spring = range(spring_start, spring_end)\n",
     "    \n",
     "    if doy in fall:\n",
-    "        season = 1#'fall'\n",
+    "        season = 1 #'fall'\n",
     "    elif doy in summer:\n",
-    "        season = 2#'winter'\n",
+    "        season = 2 #'winter'\n",
     "    elif doy in spring:\n",
-    "        season = 3#'spring'\n",
+    "        season = 3 #'spring'\n",
     "    else:\n",
-    "        season = 0#'summer' \n",
+    "        season = 0 #'summer' \n",
     "    \n",
     "    return season\n",
     "\n",
@@ -585,6 +475,15 @@
    "outputs": [],
    "source": [
     "df_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_date.corr()['Rain_Next_Day'].abs().sort_values(ascending = False).to_dict()"
    ]
   },
   {
@@ -731,7 +630,8 @@
    "outputs": [],
    "source": [
     "remove_columns = remove_high_correlation(X_train, 0.7)\n",
-    "# remove_columns += ['Precipitacao_min']"
+    "# remove_columns += ['Precipitacao_min']\n",
+    "remove_columns"
    ]
   },
   {
@@ -888,7 +788,7 @@
     "print('f1_score: ', f1_score(*evaluate))\n",
     "print('Accuracy: ', accuracy_score(*evaluate))\n",
     "print('Precision: ', precision_score(*evaluate))\n",
-    "print('Recall: ', recall_score(*evaluate))"
+    "print('Recall: ', recall_score(*evaluate))\n"
    ]
   },
   {
