--- a/src/Notebooks/4_Modeling/5.3_Predict_Rain_Today.ipynb
+++ b/src/Notebooks/4_Modeling/5.3_Predict_Rain_Today.ipynb
@@ -41,7 +41,7 @@
     "sys.path.append('../../Pipeline')\n",
     "\n",
     "from ml_utils import *\n",
-    "from utils import moving_average, reverse_mod\n"
+    "from utils import *\n"
    ]
   },
   {
@@ -206,8 +206,8 @@
     "sum_date = df[interest_cols + ['Date']].groupby('Date').sum()\n",
     "sum_date.columns = [c + '_sum' for c in sum_date.columns]\n",
     "\n",
-    "median_date = df[interest_cols + ['Date']].groupby('Date').median()\n",
-    "median_date.columns = [c + '_median' for c in median_date.columns]\n",
+    "# median_date = df[interest_cols + ['Date']].groupby('Date').median()\n",
+    "# median_date.columns = [c + '_median' for c in median_date.columns]\n",
     "\n",
     "mean_date = df[interest_cols + ['Date']].groupby('Date').mean()\n",
     "mean_date.columns = [c + '_mean' for c in mean_date.columns]\n",
@@ -215,8 +215,8 @@
     "min_date = df[interest_cols + ['Date']].groupby('Date').min()\n",
     "min_date.columns = [c + '_min' for c in min_date.columns]\n",
     "\n",
-    "max_date = df[interest_cols + ['Date']].groupby('Date').max()\n",
-    "max_date.columns = [c + '_max' for c in max_date.columns]\n"
+    "# max_date = df[interest_cols + ['Date']].groupby('Date').max()\n",
+    "# max_date.columns = [c + '_max' for c in max_date.columns]\n"
    ]
   },
   {
@@ -225,7 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_date = pd.concat([df_date, sum_date, mean_date, median_date, min_date, max_date], axis = 1)\n",
+    "df_date = pd.concat([df_date, min_date, sum_date, mean_date], axis = 1)\n",
+    "# df_date = pd.concat([df_date, sum_date, mean_date, median_date, min_date, max_date], axis = 1)\n",
     "df_date.head(2)"
    ]
   },
@@ -276,6 +277,145 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Make dynamic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_cols = {'_'.join(c.split('_')[:-1]) for c in df_date.columns if '15H' in c}\n",
+    "\n",
+    "for c in h_cols:\n",
+    "    df_date[f'{c}_diff_15h9'] =  df_date[f'{c}_15H'] - df_date[f'{c}_9H']\n",
+    "    df_date[f'{c}_diff_21h3'] =  df_date[f'{c}_21H'] - df_date[f'{c}_3H']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for h in hours:\n",
+    "    drop_cols = [c for c in df_date.columns if f'{h}H' in c]\n",
+    "df_date = df_date.drop(columns =  drop_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_date.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_cols = ['Rain_Today', 'Rain_Next_Day',\n",
+    "#        'DirecaoDoVento_min',\n",
+    "#        'VelocidadeDoVento_min',\n",
+    "#        'UmidadeRelativa_min',\n",
+    "#        'Precipitacao_min',\n",
+    "#        'RadiacaoSolar_min',\n",
+    "#        'PontoDeOrvalho_min', \n",
+    "#        'TemperaturaDoAr_min',\n",
+    "       'PressaoAtmosferica_min',\n",
+    "#        'Diff_Temp_POrvalho_min',\n",
+    "#        'DirecaoDoVento_sum',\n",
+    "#        'VelocidadeDoVento_sum', \n",
+    "       'UmidadeRelativa_sum',\n",
+    "       'Precipitacao_sum',\n",
+    "#        'RadiacaoSolar_sum',\n",
+    "       'PontoDeOrvalho_sum',\n",
+    "       'TemperaturaDoAr_sum',\n",
+    "#        'PressaoAtmosferica_sum',\n",
+    "#        'Diff_Temp_POrvalho_sum',\n",
+    "       'DirecaoDoVento_mean',\n",
+    "       'VelocidadeDoVento_mean',\n",
+    "       'UmidadeRelativa_mean',\n",
+    "       'Precipitacao_mean',\n",
+    "       'RadiacaoSolar_mean',\n",
+    "       'PontoDeOrvalho_mean',\n",
+    "       'TemperaturaDoAr_mean',\n",
+    "       'PressaoAtmosferica_mean',\n",
+    "       'Diff_Temp_POrvalho_mean',\n",
+    "#        'DirecaoDoVento_3H',\n",
+    "#        'VelocidadeDoVento_3H',\n",
+    "#        'UmidadeRelativa_3H',\n",
+    "#        'Precipitacao_3H',\n",
+    "#        'RadiacaoSolar_3H',\n",
+    "#        'PontoDeOrvalho_3H',\n",
+    "#        'TemperaturaDoAr_3H',\n",
+    "#        'PressaoAtmosferica_3H',\n",
+    "#        'Diff_Temp_POrvalho_3H',\n",
+    "#        'DirecaoDoVento_9H',\n",
+    "#        'VelocidadeDoVento_9H',\n",
+    "#        'UmidadeRelativa_9H',\n",
+    "#        'Precipitacao_9H',\n",
+    "#        'RadiacaoSolar_9H',\n",
+    "#        'PontoDeOrvalho_9H',\n",
+    "#        'TemperaturaDoAr_9H',\n",
+    "#        'PressaoAtmosferica_9H',\n",
+    "#        'Diff_Temp_POrvalho_9H',\n",
+    "#        'DirecaoDoVento_15H',\n",
+    "#        'VelocidadeDoVento_15H',\n",
+    "#        'UmidadeRelativa_15H',\n",
+    "#        'Precipitacao_15H',\n",
+    "#        'RadiacaoSolar_15H', \n",
+    "#        'PontoDeOrvalho_15H',\n",
+    "#        'TemperaturaDoAr_15H',\n",
+    "#        'PressaoAtmosferica_15H',\n",
+    "#        'Diff_Temp_POrvalho_15H',\n",
+    "#        'DirecaoDoVento_diff_15h9',\n",
+    "#        'DirecaoDoVento_diff_21h3',\n",
+    "       'VelocidadeDoVento_diff_15h9',\n",
+    "       'VelocidadeDoVento_diff_21h3',\n",
+    "       'UmidadeRelativa_diff_15h9',\n",
+    "       'UmidadeRelativa_diff_21h3',\n",
+    "       'Precipitacao_diff_15h9',\n",
+    "       'Precipitacao_diff_21h3',\n",
+    "#        'RadiacaoSolar_diff_15h9',\n",
+    "#        'RadiacaoSolar_diff_21h3',\n",
+    "       'Diff_Temp_POrvalho_diff_15h9',\n",
+    "       'Diff_Temp_POrvalho_diff_21h3',\n",
+    "       'PontoDeOrvalho_diff_15h9',\n",
+    "       'PontoDeOrvalho_diff_21h3',\n",
+    "       'TemperaturaDoAr_diff_15h9',\n",
+    "       'TemperaturaDoAr_diff_21h3',\n",
+    "       'PressaoAtmosferica_diff_15h9',\n",
+    "       'PressaoAtmosferica_diff_21h3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_date = df_date.loc[:,selected_cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Seasonal Metrics"
    ]
   },
@@ -300,17 +440,17 @@
     "    spring = range(spring_start, spring_end)\n",
     "    \n",
     "    if doy in fall:\n",
-    "        season = 1#'fall'\n",
+    "        season = 1 #'fall'\n",
     "    elif doy in summer:\n",
-    "        season = 2#'winter'\n",
+    "        season = 2 #'winter'\n",
     "    elif doy in spring:\n",
-    "        season = 3#'spring'\n",
+    "        season = 3 #'spring'\n",
     "    else:\n",
-    "        season = 0#'summer' \n",
+    "        season = 0 #'summer' \n",
     "    \n",
     "    return season\n",
     "\n",
-    "df_date['season'] =  df_date.apply(get_season, axis = 1)"
+    "df_date['season'] =  df_date.apply(get_season, axis = 1)\n"
    ]
   },
   {
@@ -343,7 +483,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_date.corr()['Rain_Next_Day'].abs().sort_values(ascending = False).to_dict()"
+    "drop_cols = [c for c in df_date.columns if 'Precipitacao' in c] + ['Rain_Next_Day']\n",
+    "df_date.drop(columns = drop_cols, inplace = True)"
    ]
   },
   {
@@ -352,7 +493,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.bar(df_date.corr()['Rain_Next_Day'].index,df_date.corr()['Rain_Next_Day'].values)"
+    "df_date.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_date.corr()['Rain_Next_Day'].abs().sort_values(ascending = False).to_dict()"
    ]
   },
   {
@@ -368,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = df_date.drop(columns = ['Rain_Next_Day']), df_date.Rain_Next_Day.values\n",
+    "X, y = df_date.drop(columns = ['Rain_Today']), df_date.Rain_Today.values\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "\n",
@@ -407,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_date.Rain_Next_Day.value_counts()/df_date.shape[0]"
+    "df_date.Rain_Today.value_counts()/df_date.shape[0]"
    ]
   },
   {
@@ -452,9 +602,9 @@
     "plt.colorbar()\n",
     "plt.show()\n",
     "\n",
-    "colorscale=[[0.0, \"rgb(240, 0, 0)\"],\n",
-    "            [0.3, \"rgb(240, 240, 239)\"],\n",
-    "            [1.0, 'rgb(240, 240, 240)']]\n",
+    "colorscale=[[1.0, \"rgb(240, 0, 0)\"],\n",
+    "            [0.6, \"rgb(240, 240, 239)\"],\n",
+    "            [0.0, 'rgb(240, 240, 240)']]\n",
     "\n",
     "fig = go.Figure()\n",
     "\n",
@@ -499,7 +649,8 @@
    "outputs": [],
    "source": [
     "remove_columns = remove_high_correlation(X_train, 0.7)\n",
-    "remove_columns += ['Precipitacao_min']"
+    "# remove_columns += ['Precipitacao_min']\n",
+    "remove_columns"
    ]
   },
   {
@@ -522,7 +673,7 @@
     "fig.add_trace(go.Heatmap( z = X_train_sel.corr(),\n",
     "                         x = X_train_sel.columns,\n",
     "                         y = X_train_sel.columns) )\n",
-    "fig.update_layout(template = 'plotly_dark',width = 700, height = 700)\n",
+    "fig.update_layout(width = 700, height = 700)\n",
     "fig.show()"
    ]
   },
@@ -656,7 +807,7 @@
     "print('f1_score: ', f1_score(*evaluate))\n",
     "print('Accuracy: ', accuracy_score(*evaluate))\n",
     "print('Precision: ', precision_score(*evaluate))\n",
-    "print('Recall: ', recall_score(*evaluate))"
+    "print('Recall: ', recall_score(*evaluate))\n"
    ]
   },
   {
@@ -665,9 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plot_precision_recall(y_test, y_pred_prob[:,1])\n",
-    "fig.update_layout(template = 'plotly_dark')\n",
-    "fig.show()"
+    "plot_precision_recall(y_test, y_pred_prob[:,1])"
    ]
   },
   {
@@ -687,207 +836,6 @@
     "print('Accuracy: ', accuracy_score(*evaluate))\n",
     "print('Precision: ', precision_score(*evaluate))\n",
     "print('Recall: ', recall_score(*evaluate))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Include Wind Direction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "errors = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/error_regions.csv', sep = ';')\n",
-    "errors[[c for c in errors.columns if 'Direcao' in c]].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_wind = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rv_ = reverse_mod(original_df[f'DirecaoDoVento_{selected_wind}'].values)\n",
-    "v_ = moving_average(rv_, window = 15)\n",
-    "v_ = np.mod(v_, 360)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "x= list(range(len(rv_))),\n",
-    "y = rv_))\n",
-    "\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x = original_df['Data_Hora'],\n",
-    "    y = original_df[f'DirecaoDoVento_{selected_wind}'],\n",
-    "    name = f'DirecaoDoVento_{selected_wind}',\n",
-    "    line = dict(color = 'gray')),\n",
-    "             )\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x = original_df['Data_Hora'],\n",
-    "    y = v_,\n",
-    "    name = 'Avg'),\n",
-    "             )\n",
-    "    \n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wind_direction = np.empty(v_.shape, dtype = np.int)\n",
-    "wind_direction[(v_ > 315 ) | (v_ <=  45 )] = 0 # North\n",
-    "wind_direction[(v_ >  45 ) & (v_ <= 135 )] = 1 # East\n",
-    "wind_direction[(v_ > 135 ) & (v_ <= 225 )] = 2 # South\n",
-    "wind_direction[(v_ > 225 ) & (v_ <= 315 )] = 3 # West\n",
-    "\n",
-    "original_df['DirecaoDoVento_cat'] = wind_direction\n",
-    "original_df['Date'] = pd.to_datetime(original_df['Date'], yearfirst=True)\n",
-    "\n",
-    "# Mode\n",
-    "wind_direction_mode = original_df.loc[ original_df['Data_Hora'].dt.hour > 20, ['DirecaoDoVento_cat','Date']].groupby('Date')\\\n",
-    "                        .apply(pd.DataFrame.mode).set_index('Date', drop = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = X.merge(wind_direction_mode, right_index=True, left_index=True)\n",
-    "dummies = pd.get_dummies(X['DirecaoDoVento_cat'], drop_first=True)\n",
-    "dummies.columns = [f'DirecaoDoVento_{i}' for i in range(len(dummies.columns))]\n",
-    "X = pd.concat([X, dummies], axis = 1 ).drop(columns = ['DirecaoDoVento_cat'])\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
-    "\n",
-    "remove_columns = remove_high_correlation(X_train, 0.7)\n",
-    "remove_columns += ['Precipitacao_min']\n",
-    "X_test_sel = X_test.drop(columns = remove_columns)\n",
-    "X_train_sel = X_train.drop(columns = remove_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_hyperopt = {\n",
-    "    'max_depth':scope.int(hp.quniform('max_depth', 5, 30, 1)),\n",
-    "    'n_estimators':scope.int(hp.quniform('n_estimators', 5, 1000, 1)),\n",
-    "    'min_child_weight':  scope.int(hp.quniform('min_child_weight', 1, 8, 1)),\n",
-    "    'reg_lambda':hp.uniform('reg_lambda', 0.01, 500.0),\n",
-    "    'reg_alpha':hp.uniform('reg_alpha', 0.01, 500.0),\n",
-    "    'colsample_bytree':hp.uniform('colsample_bytree', 0.3, 1.0),\n",
-    "    'early_stopping_rounds':  scope.int(hp.quniform('early_stopping_rounds', 1, 20, 1)),\n",
-    "                 }\n",
-    "\n",
-    "def cost_function(params):\n",
-    "    \n",
-    "    fit_parameters = {}\n",
-    "    fit_parameters['early_stopping_rounds'] = params.pop('early_stopping_rounds')\n",
-    "\n",
-    "    clf = xgb.XGBClassifier(**params,\n",
-    "                            objective=\"binary:logistic\",\n",
-    "                            random_state=42)\n",
-    "\n",
-    "    clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"], verbose = False,**fit_parameters)\n",
-    "    y_pred = clf.predict(X_test_sel)\n",
-    "\n",
-    "    return {'loss':-fbeta_score(y_test, y_pred, beta=2),'status': STATUS_OK}\n",
-    "\n",
-    "num_eval = 250\n",
-    "eval_set = [(X_train_sel, y_train), (X_test_sel, y_test)]\n",
-    "\n",
-    "trials = Trials()\n",
-    "best_param = fmin(cost_function,\n",
-    "                     param_hyperopt,\n",
-    "                     algo=tpe.suggest,\n",
-    "                     max_evals=num_eval,\n",
-    "                     trials=trials,\n",
-    "                     rstate=np.random.RandomState(1))\n",
-    "\n",
-    "best_param['min_child_weight'] = int(best_param['min_child_weight'])\n",
-    "best_param['n_estimators'] = int(best_param['n_estimators'])\n",
-    "best_param['max_depth'] = int(best_param['max_depth'])\n",
-    "best_param['early_stopping_rounds'] = int(best_param['early_stopping_rounds'])\n",
-    "best_param"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = best_param.copy()\n",
-    "\n",
-    "fit_parameters = {}\n",
-    "fit_parameters['early_stopping_rounds'] = params.pop('early_stopping_rounds')\n",
-    "\n",
-    "clf = xgb.XGBClassifier(**params,\n",
-    "                        objective=\"binary:logistic\",\n",
-    "                        random_state=42)\n",
-    "\n",
-    "clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"],\n",
-    "        verbose = False,**fit_parameters)\n",
-    "y_pred = clf.predict(X_test_sel)\n",
-    "y_pred_prob = clf.predict_proba(X_test_sel)\n",
-    "\n",
-    "plot_confusion_matrix(y_test, y_pred, ['0','1'])\n",
-    "evaluate = (y_test, y_pred)\n",
-    "print('f1_score: ', f1_score(*evaluate))\n",
-    "print('Accuracy: ', accuracy_score(*evaluate))\n",
-    "print('Precision: ', precision_score(*evaluate))\n",
-    "print('Recall: ', recall_score(*evaluate))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plot_precision_recall(y_test, y_pred_prob[:,1])\n",
-    "fig.update_layout(template = 'plotly_dark')\n",
-    "fig.show()"
    ]
   }
  ],
