include shift and hours (window) parameter

--- a/src/Notebooks/4_Modeling/7.0_Predict_Rain_6H.ipynb
+++ b/src/Notebooks/4_Modeling/7.0_Predict_Rain_6H.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hours = 6\n",
+    "hours = 3\n",
     "\n",
     "unique_values = np.arange(0, len(original_df), 1)\n",
     "n_group = hours * 4\n",
@@ -184,15 +184,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_df.loc[::n_group, ['Data_Hora','h_id']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "map_ = original_df.loc[::n_group, ['Data_Hora', 'h_id']].set_index('h_id').to_dict()['Data_Hora']"
    ]
   },
@@ -209,16 +200,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "precipitacao_sum = original_df.loc[:, ['h_id', 'Precipitacao']].groupby('h_id').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = precipitacao_sum.loc[precipitacao_sum['Precipitacao'] != 0, 'Precipitacao'].values\n",
     "\n",
-    "has_rain_treshold = 10\n",
-    "precipitacao_sum = original_df.loc[:, ['h_id', 'Precipitacao']].groupby('h_id').sum()\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "fig.add_trace(go.Box(\n",
+    "    name = f'Precipitacao Acc {hours}H',\n",
+    "    y = y,\n",
+    "                    ))\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "has_rain_treshold = 0.01\n",
+    "shift = 2\n",
+    "\n",
     "precipitacao_sum.loc[:, 'Rain_Now'] = (precipitacao_sum['Precipitacao'] > has_rain_treshold ).astype(int)\n",
-    "precipitacao_sum.loc[:, f'Rain_Next_{hours}H'] = precipitacao_sum.loc[:, 'Rain_Now'].shift(-1)\n",
+    "precipitacao_sum.loc[:, f'Rain_Next_{hours}H'] = precipitacao_sum.loc[:, 'Rain_Now'].shift(-shift)\n",
     "precipitacao_sum = precipitacao_sum.dropna()\n",
     "\n",
-    "# Remove last index (h_id) from original_df \n",
-    "last_index = original_df.groupby('h_id').count().iloc[:,0].index[-1]\n",
-    "original_df = original_df[original_df.h_id != last_index]\n",
+    "# Remove last index (h_id) from original_df\n",
+    "for i in range(shift):\n",
+    "    last_index = original_df.groupby('h_id').count().iloc[:,0].index[-1]\n",
+    "    original_df = original_df[original_df.h_id != last_index]\n",
     "\n",
     "precipitacao_sum.head(10)\n"
    ]
@@ -245,12 +263,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "interest_cols.remove('DirecaoDoVento')\n",
     "\n",
     "sum_df = original_df[interest_cols + ['h_id']].groupby('h_id').sum()\n",
     "sum_df.columns = [c + '_sum' for c in sum_df.columns]\n",
+    "sum_df = sum_df.loc[:,'Precipitacao_sum']\n",
     "\n",
-    "median_df = original_df[interest_cols + ['h_id']].groupby('h_id').median()\n",
-    "median_df.columns = [c + '_median' for c in median_df.columns]\n",
+    "# median_df = original_df[interest_cols + ['h_id']].groupby('h_id').median()\n",
+    "# median_df.columns = [c + '_median' for c in median_df.columns]\n",
     "\n",
     "mean_df = original_df[interest_cols + ['h_id']].groupby('h_id').mean()\n",
     "mean_df.columns = [c + '_mean' for c in mean_df.columns]\n",
@@ -269,9 +289,18 @@
    "outputs": [],
    "source": [
     "# df = pd.concat([df, mean_df], axis = 1)\n",
-    "df = pd.concat([df, sum_df, mean_df, median_df, min_df, max_df], axis = 1)\n",
+    "df = pd.concat([df, sum_df, mean_df, min_df, max_df], axis = 1)\n",
     "df.index = df.index.map(map_)\n",
     "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -546,12 +575,12 @@
     "\n",
     "fig = go.Figure()\n",
     "\n",
-    "fig.add_trace(go.Heatmap( z = X_train.corr(),\n",
+    "fig.add_trace(go.Heatmap(z = X_train.corr(),\n",
     "                         x = X_train.columns,\n",
     "                         y = X_train.columns, \n",
     "                         colorscale = colorscale))\n",
     "fig.update_layout(width = 700, height = 700)\n",
-    "fig.show"
+    "fig.show()"
    ]
   },
   {
@@ -560,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_high_correlation(df, threshold):\n",
+    "def remove_high_correlation(df, threshold, label_corr):\n",
     "    \n",
     "    dataset = df.copy()\n",
     "    \n",
@@ -571,11 +600,16 @@
     "    for i in range(len(corr_matrix.columns)):\n",
     "        for j in range(i):\n",
     "            if (np.abs(corr_matrix.iloc[i, j]) >= threshold) and (corr_matrix.columns[j] not in col_corr):\n",
-    "                colname = corr_matrix.columns[i] # getting the name of column\n",
-    "                col_corr.add(colname)\n",
+    "                colname_i = corr_matrix.columns[i] # getting the name of column\n",
+    "                colname_j = corr_matrix.columns[j] # getting the name of column\n",
+    "                if label_corr[colname_i] > label_corr[colname_j]:\n",
+    "                    col_corr.add(colname_j)\n",
+    "                    colname = colname_j\n",
+    "                else:\n",
+    "                    col_corr.add(colname_i)\n",
+    "                    colname = colname_i\n",
     "                if colname in dataset.columns:\n",
     "                    remove_columns.append(colname) # deleting the column from the dataset\n",
-    "                    \n",
     "                    \n",
     "    return remove_columns"
    ]
@@ -586,7 +620,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_columns = remove_high_correlation(X_train, 0.7)\n",
+    "label_corr = pd.concat([X_train.reset_index(drop = True), pd.Series(y_train, name = 'label')], axis = 1).corr()['label'].abs().to_dict()\n",
+    "\n",
+    "remove_columns = remove_high_correlation(X_train, 0.7, label_corr)\n",
     "remove_columns += ['Precipitacao_min']"
    ]
   },
@@ -689,7 +725,7 @@
     "                            objective=\"binary:logistic\",\n",
     "                            random_state=42)\n",
     "\n",
-    "    clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"], verbose = False,**fit_parameters)\n",
+    "    clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"], verbose = False, **fit_parameters)\n",
     "    y_pred = clf.predict(X_test_sel)\n",
     "\n",
     "    return {'loss':-fbeta_score(y_test, y_pred, beta=2),'status': STATUS_OK}\n",
@@ -775,207 +811,6 @@
     "print('Accuracy: ', accuracy_score(*evaluate))\n",
     "print('Precision: ', precision_score(*evaluate))\n",
     "print('Recall: ', recall_score(*evaluate))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Include Wind Direction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "errors = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/error_regions.csv', sep = ';')\n",
-    "errors[[c for c in errors.columns if 'Direcao' in c]].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_wind = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rv_ = reverse_mod(original_df[f'DirecaoDoVento_{selected_wind}'].values)\n",
-    "v_ = moving_average(rv_, window = 15)\n",
-    "v_ = np.mod(v_, 360)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "x= list(range(len(rv_))),\n",
-    "y = rv_))\n",
-    "\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure(layout=dict(template = 'plotly_dark'))\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x = original_df['Data_Hora'],\n",
-    "    y = original_df[f'DirecaoDoVento_{selected_wind}'],\n",
-    "    name = f'DirecaoDoVento_{selected_wind}',\n",
-    "    line = dict(color = 'gray')),\n",
-    "             )\n",
-    "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x = original_df['Data_Hora'],\n",
-    "    y = v_,\n",
-    "    name = 'Avg'),\n",
-    "             )\n",
-    "    \n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wind_direction = np.empty(v_.shape, dtype = np.int)\n",
-    "wind_direction[(v_ > 315 ) | (v_ <=  45 )] = 0 # North\n",
-    "wind_direction[(v_ >  45 ) & (v_ <= 135 )] = 1 # East\n",
-    "wind_direction[(v_ > 135 ) & (v_ <= 225 )] = 2 # South\n",
-    "wind_direction[(v_ > 225 ) & (v_ <= 315 )] = 3 # West\n",
-    "\n",
-    "original_df['DirecaoDoVento_cat'] = wind_direction\n",
-    "original_df['Date'] = pd.to_datetime(original_df['Date'], yearfirst=True)\n",
-    "\n",
-    "# Mode\n",
-    "wind_direction_mode = original_df.loc[ original_df['Data_Hora'].dt.hour > 20, ['DirecaoDoVento_cat','Date']].groupby('Date')\\\n",
-    "                        .apply(pd.DataFrame.mode).set_index('Date', drop = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = X.merge(wind_direction_mode, right_index=True, left_index=True)\n",
-    "dummies = pd.get_dummies(X['DirecaoDoVento_cat'], drop_first=True)\n",
-    "dummies.columns = [f'DirecaoDoVento_{i}' for i in range(len(dummies.columns))]\n",
-    "X = pd.concat([X, dummies], axis = 1 ).drop(columns = ['DirecaoDoVento_cat'])\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
-    "\n",
-    "remove_columns = remove_high_correlation(X_train, 0.7)\n",
-    "remove_columns += ['Precipitacao_min']\n",
-    "X_test_sel = X_test.drop(columns = remove_columns)\n",
-    "X_train_sel = X_train.drop(columns = remove_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_hyperopt = {\n",
-    "    'max_depth':scope.int(hp.quniform('max_depth', 5, 30, 1)),\n",
-    "    'n_estimators':scope.int(hp.quniform('n_estimators', 5, 1000, 1)),\n",
-    "    'min_child_weight':  scope.int(hp.quniform('min_child_weight', 1, 8, 1)),\n",
-    "    'reg_lambda':hp.uniform('reg_lambda', 0.01, 500.0),\n",
-    "    'reg_alpha':hp.uniform('reg_alpha', 0.01, 500.0),\n",
-    "    'colsample_bytree':hp.uniform('colsample_bytree', 0.3, 1.0),\n",
-    "    'early_stopping_rounds':  scope.int(hp.quniform('early_stopping_rounds', 1, 20, 1)),\n",
-    "                 }\n",
-    "\n",
-    "def cost_function(params):\n",
-    "    \n",
-    "    fit_parameters = {}\n",
-    "    fit_parameters['early_stopping_rounds'] = params.pop('early_stopping_rounds')\n",
-    "\n",
-    "    clf = xgb.XGBClassifier(**params,\n",
-    "                            objective=\"binary:logistic\",\n",
-    "                            random_state=42)\n",
-    "\n",
-    "    clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"], verbose = False,**fit_parameters)\n",
-    "    y_pred = clf.predict(X_test_sel)\n",
-    "\n",
-    "    return {'loss':-fbeta_score(y_test, y_pred, beta=2),'status': STATUS_OK}\n",
-    "\n",
-    "num_eval = 250\n",
-    "eval_set = [(X_train_sel, y_train), (X_test_sel, y_test)]\n",
-    "\n",
-    "trials = Trials()\n",
-    "best_param = fmin(cost_function,\n",
-    "                     param_hyperopt,\n",
-    "                     algo=tpe.suggest,\n",
-    "                     max_evals=num_eval,\n",
-    "                     trials=trials,\n",
-    "                     rstate=np.random.RandomState(1))\n",
-    "\n",
-    "best_param['min_child_weight'] = int(best_param['min_child_weight'])\n",
-    "best_param['n_estimators'] = int(best_param['n_estimators'])\n",
-    "best_param['max_depth'] = int(best_param['max_depth'])\n",
-    "best_param['early_stopping_rounds'] = int(best_param['early_stopping_rounds'])\n",
-    "best_param"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = best_param.copy()\n",
-    "\n",
-    "fit_parameters = {}\n",
-    "fit_parameters['early_stopping_rounds'] = params.pop('early_stopping_rounds')\n",
-    "\n",
-    "clf = xgb.XGBClassifier(**params,\n",
-    "                        objective=\"binary:logistic\",\n",
-    "                        random_state=42)\n",
-    "\n",
-    "clf.fit(X_train_sel, y_train, eval_set = eval_set, eval_metric=[\"logloss\"],\n",
-    "        verbose = False,**fit_parameters)\n",
-    "y_pred = clf.predict(X_test_sel)\n",
-    "y_pred_prob = clf.predict_proba(X_test_sel)\n",
-    "\n",
-    "plot_confusion_matrix(y_test, y_pred, ['0','1'])\n",
-    "evaluate = (y_test, y_pred)\n",
-    "print('f1_score: ', f1_score(*evaluate))\n",
-    "print('Accuracy: ', accuracy_score(*evaluate))\n",
-    "print('Precision: ', precision_score(*evaluate))\n",
-    "print('Recall: ', recall_score(*evaluate))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plot_precision_recall(y_test, y_pred_prob[:,1])\n",
-    "fig.update_layout(template = 'plotly_dark')\n",
-    "fig.show()"
    ]
   }
  ],
