--- a/src/Notebooks/4_Modeling/1.0_Prep_Data.ipynb
+++ b/src/Notebooks/4_Modeling/1.0_Prep_Data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +87,16 @@
     "df_repaired = pd.read_csv('../../../data/cleandata/Info pluviometricas/Merged Data/repaired.csv', sep = ';')\n",
     "df_merged['Data_Hora'] = pd.to_datetime(df_merged['Data_Hora'], yearfirst=True)\n",
     "df_repaired['Data_Hora'] = pd.to_datetime(df_repaired['Data_Hora'], yearfirst=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged.sort_values(by='Data_Hora').to_csv('../../../data/cleandata/Info pluviometricas/Merged Data/merged.csv', sep = ';', index=False)\n",
+    "df_repaired.sort_values(by='Data_Hora').to_csv('../../../data/cleandata/Info pluviometricas/Merged Data/repaired.csv', sep = ';', index=False)"
    ]
   },
   {
@@ -704,6 +714,35 @@
    "source": [
     "df_labels_grouped.to_csv('../../../data/cleandata/Info pluviometricas/Merged Data/full_data.csv', index=False, sep=';')\n",
     "df_labels_simple.to_csv('../../../data/cleandata/Info pluviometricas/Merged Data/prepped_data.csv', index=False, sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'oi': 2}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads('[{\"oi\":2}]')"
    ]
   }
  ],
